adapted pictures in the block 'project'

--- a/src/sass/blocks/_testimonials.scss
+++ b/src/sass/blocks/_testimonials.scss
@@ -29,7 +29,8 @@
     .slick-prev, .slick-next{
         position: absolute;
         top: 50%;
-        left: 30px; 
+        left: -30px;
+        z-index: 10;
         transform: translateY(-50%);
         border: none;
         background-color: #131313;
@@ -41,7 +42,7 @@
     }
     .slick-next {
         left: auto;
-        right: 20px;
+        right: -30px;
     }
     .slick-dots{
         list-style-type: none;
