--- a/src/sass/blocks/_projects.scss
+++ b/src/sass/blocks/_projects.scss
@@ -7,8 +7,6 @@
         padding-top: 190px;
         padding-bottom: 90px;
     }
-
-
     &__item{
         padding: 50px 50px;
         margin-bottom: 50px;
@@ -21,6 +19,22 @@
         border-radius: 20px;
         &_margin{
             margin-top: 90px;
+        }
+        &-img {
+            width: 320px;
+            height: 190px;
+            border-radius: 10px;
+            background-color: #fff;
+            img{
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                border-radius: 10px;
+            }
+            :hover{
+                border: 2px solid #7456FF;
+                background-color: rgba(116, 86, 255, 0.1);
+            }
         }
         
         &-text{
@@ -42,10 +56,5 @@
         }
     }
     
-    &__img{
-        display: block;
-        width: 320px;
-        height: 190px;
-        border-radius: 10px;
-    }
+    
 }
